# nomad

./: Cargo.toml  README.md
config/: locations.json  locations.toml
src/: change_location.rs  events.rs  game_over.rs  game_plugin.rs  input.rs  lib.rs  locations.rs  main.rs  party_resources.rs  plugin.rs  settlement_resources.rs  ui.rs  venture.rs
src/locations/: config.rs  events.rs  location.rs  location_config.rs  locations.rs  plugin.rs  setup.rs
src/overworld/: berry_bush.rs  camera.rs  change_location.rs  collisions.rs  party_resources.rs  player.rs  plugin.rs  setup.rs  stick.rs  tree.rs  water_pool.rs
src/overworld/entities/: berry_bush.rs  change_location_zone.rs  player.rs  stick.rs  stockpile.rs  tree.rs  water_pool.rs
src/overworld/locations/: config.rs
src/overworld/ui/: party_resources.rs  plugin.rs  settlement_resources.rs
src/ui/: encounter.rs  game_over.rs  home.rs  plugin.rs  resources.rs
