[package]
name = "nomad"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
